[tool.poetry]
name = "KL_TX_Data"
version = "0.1.0"
description = ""
authors = ["binoy pilakkat <binoypilakkat@admaren.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
SQLAlchemy = "^1.4.27"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
